[package]
name = "plotters-text"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.plotters-backend]
# git = "https://github.com/plotters-rs/plotters"
version = "0.3.1"
